--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
 
 <br>
 <br>
+<button id="pause" hidden> pause </button>
+<button id="resume" hidden> resume </button>
+
+<br>
+<br>
 <input id="myRange" type="range" value="1" min="0.2" max="1.5" step="0.1" />
 <div id="demo"></div>
 
@@ -13,6 +18,9 @@
     window.periodicity = setPeriodicity
     document.querySelector('#init').addEventListener('click', init)
     document.querySelector('#stop').addEventListener('click', stop)
+
+    document.querySelector('#pause').addEventListener('click', pause)
+    document.querySelector('#resume').addEventListener('click', resume)
 </script>
 
 <script>
