--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <div id="demo"></div>
 
 <script type="module">
-    import { init, stop, setPeriodicity } from './audio-core.js'
+    import { init, stop, setPeriodicity, setMainGain } from './audio-core.js'
     //window.start = start
     window.periodicity = setPeriodicity
     document.querySelector('#init').addEventListener('click', init)
@@ -21,6 +21,8 @@
 
     document.querySelector('#pause').addEventListener('click', pause)
     document.querySelector('#resume').addEventListener('click', resume)
+
+    window.setMainGain = setMainGain
 </script>
 
 <script>
