--- a/public/index.html
+++ b/public/index.html
@@ -37,12 +37,15 @@
 </div>
 
 <script type="module">
-    import { init, stop, setPeriodicity, setMainGain, setClick } from './audio-core.js'
+    import { init, stop, setPeriodicity, setMainGain, setSound, getSounds } from './audio-core.js'
     //window.start = start
     window.periodicity = setPeriodicity
     document.querySelector('#init').addEventListener('click', () => {
         document.querySelector('#init').setAttribute("disabled",true)
         init()
+        //document.querySelector('#beep').addEventListener('click', getSounds().get('beeper')) //getValueFromEvent)
+        //document.querySelector('#kick').addEventListener('click', getSounds().get('kicker')) //getValueFromEvent)
+
     })
 
     document.querySelector('#stop').addEventListener('click', () => {
@@ -55,11 +58,12 @@
 
     window.setMainGain = setMainGain
 
-    document.querySelector('#beep').addEventListener('click', getValueFromEvent)
-    document.querySelector('#kick').addEventListener('click', getValueFromEvent)
+    //document.querySelector('#beep').addEventListener('click', getSounds().get('beeper')) //getValueFromEvent)
+    //document.querySelector('#kick').addEventListener('click', getSounds().get('kicker')) //getValueFromEvent)
 
     function getValueFromEvent(event) {
-        setClick(event.target.value)
+        console.log(evet.target.value)
+        setSound(event.target.value)
     }
 
 </script>
