--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <br>
 
 <input id="myRange" type="range" value="1" min="0.2" max="1.5" step="0.1" />
-<div> bpm: (set before init)</div><div id="demo"></div>
+<div> bpm:</div><div id="demo"></div>
 
 <br>
 
@@ -24,7 +24,7 @@
 <br>
 <br>
 
-<legend>sound: (set before init)</legend-->
+<legend>sound:</legend-->
 
 <div>
     <input type="radio" id="beep" 
