--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>power-audio</title>
+
+    <script type="module">
+      import { StateNodes} from './audio-nodes.js'
+      window.StateNodes = new StateNodes()
+    </script>
   </head>
   <body>
     <noscript>
