--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
     <title>power-audio</title>
 
     <script type="module">
+      import { getSounds, setBeats } from './audio-core.js' // FIX
       import { StateNodes} from './audio-nodes.js'
+      window.getSounds = getSounds
+      window.setBeats = setBeats
       window.StateNodes = new StateNodes()
     </script>
   </head>
