--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,11 @@
     </script>
 
     <script type="module">
-      import { ScheduleModule, Schedule } from './schedule-metronome.js'
+      import { Schedule, ScheduleList } from './schedule-metronome.js'
 
       window.Schedule = Schedule
-      window.ScheduleModule = new ScheduleModule()
+      window.ScheduleList = new ScheduleList()
+      // window.ScheduleModule = new ScheduleModule()
     </script>
   </head>
   <body>
