--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
     </script>
 
     <script type="module">
-      import { Schedule, ScheduleList } from './schedule-metronome.js'
+      import { Schedule, ScheduleList, ScheduleModule } from './schedule-metronome.js'
 
       window.Schedule = Schedule
       window.ScheduleList = new ScheduleList()
-      // window.ScheduleModule = new ScheduleModule()
+      window.ScheduleModule = new ScheduleModule()
     </script>
   </head>
   <body>
