--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       import { Schedule, ScheduleList, ScheduleModule } from './schedule-metronome.js'
 
       window.Schedule = Schedule
-      window.ScheduleList = new ScheduleList()
+      // window.ScheduleList = new ScheduleList()
       window.ScheduleModule = new ScheduleModule()
     </script>
   </head>
