WIP isolating schedule

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,12 @@
       // window.ScheduleList = new ScheduleList()
       window.ScheduleModule = new ScheduleModule()
     </script>
+
+    <script type="module">
+      import { ScheduleModule } from './minschedule.js'
+      window.Min = new ScheduleModule()
+    </script>
+
   </head>
   <body>
     <noscript>
