refactor ++ clean code

--- a/public/index.html
+++ b/public/index.html
@@ -19,16 +19,11 @@
     </script>
 
     <script type="module">
-      import { Schedule, ScheduleList, ScheduleModule } from './schedule-metronome.js'
+      import { ScheduleModule } from './schedule-metronome.js'
 
-      window.Schedule = Schedule
+      // window.Schedule = Schedule
       // window.ScheduleList = new ScheduleList()
       window.ScheduleModule = new ScheduleModule()
-    </script>
-
-    <script type="module">
-      import { ScheduleModule } from './minschedule.js'
-      window.Min = new ScheduleModule()
     </script>
 
   </head>
