working with schedules class directly on UI

--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
     </script>
 
     <script type="module">
-      import { ScheduleModule } from './schedule-metronome.js'
+      import { ScheduleModule, Schedule, ScheduleNode } from './schedule-metronome.js'
 
-      // window.Schedule = Schedule
-      // window.ScheduleList = new ScheduleList()
+      window.Schedule = Schedule
+      window.ScheduleNode = ScheduleNode
       window.ScheduleModule = new ScheduleModule()
     </script>
 
