--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>power-audio</title>
 
     <script type="module">
-      import { getSounds, setTimeLimit, setTimeLimitEnable, setStressOneInterval, setStressTwoInterval, setStressOnly } from './audio-core.js' // FIX
+      import { getSounds, setTimeLimit, setTimeLimitEnable, setStressOneInterval, setStressTwoInterval } from './audio-core.js' // FIX
       import { StateNodes } from './audio-nodes.js'
       
       window.getSounds = getSounds
@@ -18,7 +18,6 @@
 
       window.stressOneInterval = setStressOneInterval
       window.stressTwoInterval = setStressTwoInterval
-      // window.stressOnly = stressOnly
 
     </script>
 
