--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,12 @@
     <title>power-audio</title>
 
     <script type="module">
-      import { getSounds, resetCounter, setTimeLimit, setTimeLimitEnable, setStressOneInterval, setStressTwoInterval } from './audio-core.js' // FIX
+      import { getSounds, resetCounter, resetActualBeat, setTimeLimit, setTimeLimitEnable, setStressOneInterval, setStressTwoInterval } from './audio-core.js' // FIX
       import { StateNodes } from './audio-nodes.js'
       
       window.getSounds = getSounds
       window.resetCounter = resetCounter
+      window.resetActualBeat = resetActualBeat
       window.setTimeLimit = setTimeLimit
       window.setTimeLimitEnable = setTimeLimitEnable
       window.StateNodes = new StateNodes()
